@@ -1,3 +1,8 @@
+2010-01-31  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/42898
+	* gcc.dg/torture/pr42898.c: New testcase.
+
 2010-01-31  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/38324
